syntax = "proto3";
import "fund.proto";
import "portfolio.proto";

package proto;

option go_package = "./proto";

message Empty { }

service FundService {
  rpc GetDetails(FundDetailsRequest) returns (FundDetailsResponse);
  rpc SearchFunds(SearchFundsRequest) returns (SearchFundsResponse);
  rpc FilterHoldings(FilterFundHoldingsRequest) returns (FilterFundHoldingsResponse);
  rpc FilterFunds(FilterFundsRequest) returns (FilterFundsResponse);
  rpc CompareFunds(CompareFundRequest) returns (CompareFundResponse);
}
service PortfolioService {
  rpc GetPortfolios(PortfoliosRequest) returns (PortfoliosResponse);
  rpc UpsertPortfolio(UpsertPortfolioRequest) returns (UpsertPortfolioResponse);
  rpc UpdatePortfolioFundAmount(UpdatePortfolioFundAmountRequest) returns (Empty);
  rpc GetPortfolioDetails(PortfolioDetailsRequest) returns (PortfolioDetailsResponse);
  rpc FilterPortfolioHoldings(FilterPortfolioFundHoldingsRequest) returns (FilterPortfolioFundHoldingsResponse);
}
